# global-connected-tide-gauge-station-clustering

./: README.md  pyproject.toml
data/GIA/: drsl250.PSMSL.ICE5Gv1.3_VM2_L90_2012b.txt
data/Meeresdaten_simuliert/: filelist.txt  metadata.txt  station_id_to_index.json
data/SEALEVEL_GLO_PHY_L4_MY_008_047/: dt_global_allsat_msla_h_y1993_m01.nc  dt_global_allsat_msla_h_y1993_m02.nc  dt_global_allsat_msla_h_y1993_m03.nc  dt_global_allsat_msla_h_y1993_m04.nc  dt_global_allsat_msla_h_y1993_m05.nc  dt_global_allsat_msla_h_y1993_m06.nc  dt_global_allsat_msla_h_y1993_m07.nc  dt_global_allsat_msla_h_y1993_m08.nc  dt_global_allsat_msla_h_y1993_m09.nc  dt_global_allsat_msla_h_y1993_m10.nc  dt_global_allsat_msla_h_y1993_m11.nc  dt_global_allsat_msla_h_y1993_m12.nc  dt_global_allsat_msla_h_y1994_m01.nc  dt_global_allsat_msla_h_y1994_m02.nc  dt_global_allsat_msla_h_y1994_m03.nc  dt_global_allsat_msla_h_y1994_m04.nc  dt_global_allsat_msla_h_y1994_m05.nc  dt_global_allsat_msla_h_y1994_m06.nc  dt_global_allsat_msla_h_y1994_m07.nc  dt_global_allsat_msla_h_y1994_m08.nc  dt_global_allsat_msla_h_y1994_m09.nc  dt_global_allsat_msla_h_y1994_m10.nc  dt_global_allsat_msla_h_y1994_m11.nc  dt_global_allsat_msla_h_y1994_m12.nc  dt_global_allsat_msla_h_y1995_m01.nc  dt_global_allsat_msla_h_y1995_m02.nc  dt_global_allsat_msla_h_y1995_m03.nc  dt_global_allsat_msla_h_y1995_m04.nc  (+337 more)
data/rlr_annual/: filelist.txt  (+2 more)
pythonProject/: pyproject.toml
src/: main.py
test/: test_calculate_timeseries_difference.py  test_evaluate_clustering_PSMSL.py  test_line_graph_clustering.py  test_sea_level_line_graph.py
(+2578 files in other folders)
